# crawler

./: .dockerignore  .env.example  .gitignore  2025-09-01-init.txt  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  dump.rdb  init_db.py  migrate_sources.py  pyproject.toml  scrapy.cfg  start.sh  start_docker.sh  stop.sh  stop_docker.sh
.github/: pull_request_template.md
config/: crawl_sources.json
crawler-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
crawler-frontend/src/: App.tsx  index.css
crawler-frontend/src/api/: admin.ts  articles.ts  client.ts  index.ts  monitor.ts  settings.ts  sources.ts  stats.ts  tasks.ts
crawler-frontend/src/pages/: Admin.tsx  Articles.tsx  Dashboard-simple.tsx  Dashboard.tsx  HotArticles.tsx  Monitor.tsx  Sources.tsx  Stats.tsx  Tasks.tsx
crawler-frontend/src/types/: index.ts
docs/: README.md  architecture.md  crawler-verification-guide.md  css-selector-guide.md  scrapy-pipeline-flow.md
migrations/: 002_add_crawler_sources.sql  003_make_url_nullable.sql  add_hot_score_fields.py
src/: items.py  middlewares.py  pipelines.py  settings.py
src/api/: __init__.py  main.py
src/models/: __init__.py  article.py  crawler_source.py  database.py  task_history.py
src/nlp/: __init__.py  classifier.py  extractor.py  processor.py
src/services/: __init__.py  hot_score_service.py
src/spiders/: general.py
src/tasks/: __init__.py  celery_app.py  crawler_tasks.py
src/utils/: __init__.py  cache.py  helpers.py
tests/: test_api.py  test_nlp.py  test_utils.py
(+12 files in other folders)
